2012-12-17  Halton Huo  <halton.huo@intel.com>

        [EFL] Add ecore_imf_evas to FindEcore.cmake
        https://bugs.webkit.org/show_bug.cgi?id=105159

        Reviewed by Laszlo Gombos.

        * PlatformEfl.cmake: Add ECORE_IMF_EVAS_LIBRARIES to WebProcess_LIBRARIES

2012-12-17  Huang Dongsung  <luxtella@company100.net>

        Coordinated Graphics: Refactor TiledBackingStore code in CoordinatedGraphicsLayer.
        https://bugs.webkit.org/show_bug.cgi?id=103959

        Reviewed by Kenneth Rohde Christiansen.

        Currently, CoordinatedGraphicsLayer has complex code related to TiledBackingStore.
        It has two problem.
        1. CoordinatedGraphicsLayer hacks TiledBackingStore to prevent
        TiledBackingStore from asynchronously sending UpdateTile message to UI
        Process.
        2. CreateTile and RemoveTile message can be sent to UI Process at any time.

        This patch makes CoordinatedGraphicsLayer use TiledBackingStore more explicitly.
        It means only during flushing layer states, CoordinatedGraphicsLayer
        calls methods of TiledBackingStore, which indirectly call createTile(),
        updateTile() and removeTile().

        * WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsLayer.cpp:
        (WebCore::CoordinatedGraphicsLayer::CoordinatedGraphicsLayer):
        (WebCore::CoordinatedGraphicsLayer::setVisibleContentRectTrajectoryVector):
        (WebCore::CoordinatedGraphicsLayer::setContentsScale):
        (WebCore::CoordinatedGraphicsLayer::adjustContentsScale):
        (WebCore::CoordinatedGraphicsLayer::tiledBackingStoreHasPendingTileCreation):
        (WebCore::CoordinatedGraphicsLayer::beginContentUpdate):
        (WebCore::CoordinatedGraphicsLayer::createTile):
        (WebCore::CoordinatedGraphicsLayer::updateTile):
        (WebCore::CoordinatedGraphicsLayer::removeTile):
        (WebCore::CoordinatedGraphicsLayer::updateContentBuffers):
        (WebCore::CoordinatedGraphicsLayer::purgeBackingStores):