@@ -1,3 +1,9 @@
+2012-12-17  Sam Weinig  <sam@webkit.org>
+
+        Try to fix the Mac build.
+
+        * NetworkProcess/mac/NetworkProcessMac.mm:
+
 2012-12-17  Halton Huo  <halton.huo@intel.com>
 
         [EFL] Add ecore_imf_evas to FindEcore.cmake
